--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,5 @@ minecraftVersion=1.18
 yarnVersion=1.18+build.1
 loaderVersion=0.12.6
 fabricVersion=0.43.1+1.18
-fabricKotlinVersion=1.7.0
+fabricKotlinVersion=1.7.0+kotlin.1.6.0
+kambrikVersion=3.0.0-1.18
