--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx2G
 
 kotlin.code.style=official
-systemProp.kotlinVersion=1.6.0
+systemProp.kotlinVersion=1.6.10
 
-# https://fabricmc.net/versions.html
+# https://fabricmc.net/develop
 minecraftVersion=1.18.1
-yarnVersion=1.18.1+build.4
+yarnVersion=1.18.1+build.14
 loaderVersion=0.12.12
-fabricVersion=0.44.0+1.18
-fabricKotlinVersion=1.7.0+kotlin.1.6.0
-kambrikVersion=3.0.0-1.18
+fabricVersion=0.45.0+1.18
+fabricKotlinVersion=1.7.1+kotlin.1.6.10
+kambrikVersion=3.0.2-1.18-SNAPSHOT.2022.0102.095710
